# love_note

./: .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  README.md  codegen.ts  package-lock.json  package.json  postcss.config.ts  vite.config.ts
crates/love-note/: Cargo.toml
crates/love-note-plugin-api/: Cargo.toml
crates/love-note-plugin-api/src/: lib.rs
crates/love-note/src/: editor.rs  lib.rs  main.rs
crates/love-note/src/block/: heading.rs  mod.rs  text.rs
crates/love-note/src/storage/: document.rs  mod.rs  redb_store.rs
docs/: DEVELOPMENT.md  architecture-v2.md  requirements.md
public/sample-plugins/: block-manager-plugin.js  counter.js  error-example.js  hello-world.js  jsx-example.jsx  jsx-test.jsx  react-panel-test.js  tsx-test.tsx  typescript-jsx.tsx
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20250726181314_initial_schema.sql  20250727151151_workspace_project_experiment_schema.sql  20250803120000_add_users_table.sql  20250810031443_images_table.sql  20250825162958_plugins_table.sql
src-tauri/src/: database.rs  graphql.rs  image_utils.rs  lib.rs  loader.rs  main.rs  models.rs
src/components/: AutomergeRepo.tsx  ConnectWidget.tsx  ConnectionStatus.tsx  DocumentTest.tsx  GraphQLSchemaExport.tsx  GraphQLTest.tsx  HierarchicalTest.tsx  Home.tsx  MarkdownEditor.tsx  MarkdownPage.tsx  MarkdownViewer.tsx  PluginViewRenderer.tsx  RecentFiles.tsx  SharedNotes.tsx  Sidebar.tsx  WebSocketStatus.tsx  WorkspaceManagement.tsx  graphQLSamples.ts
src/components/BlockList/: AddBlockButton.tsx  EmptyState.tsx  blockTypes.ts  index.tsx
src/components/Home/: RecentFiles.tsx  WorkspaceManagement.tsx  WorkspaceSelector.tsx  index.tsx
src/components/Markdown/: EditMode.tsx  MarkdownEditor.tsx  MarkdownPage.tsx  MarkdownPreview.tsx  PreviewMode.tsx  config.tsx  index.tsx  styles.css
src/components/Sidebar/: HoverSidebar.tsx  ProjectItem.tsx  WorkspaceContentItem.tsx  WorkspaceSelector.tsx  constants.ts  index.tsx  types.ts
src/components/Sidebar/components/: ProjectItem.tsx  ResizeHandle.tsx  SidebarHeader.tsx  WorkspaceContentItem.tsx  WorkspaceSelector.tsx
src/components/Sidebar/hooks/: useSidebarResize.ts  useSidebarState.ts  useSidebarWorkspaces.ts
src/components/debug/: GraphQLSchemaExport.tsx  GraphQLTest.tsx  ImageUploadTest.tsx  queries.graphql
src/components/plugins/: PluginDropZone.tsx  PluginFileSelector.tsx  PluginList.tsx  PluginManager.tsx  index.ts
src/hooks/: useBlocks.ts  useGraphQL.ts  usePluginSidebar.ts
src/plugins/: ESModuleLoader.ts  JSXTranspiler.ts  PluginAPI.ts  PluginRegistry.ts  PluginViewManager.ts  index.ts  types.ts
src/services/: blockService.ts  graphqlClient.ts  index.ts  pluginService.ts  types.ts
src/utils/: constants.ts  graphql.ts
tauri-plugin-graphql/: Cargo.toml  README.md  build.rs
tauri-plugin-graphql/permissions/autogenerated/: reference.md
tauri-plugin-graphql/src/: lib.rs
