[workspace]
resolver = "2"
members = [
    "crates/love-note",
    "crates/love-note-plugin-api",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["jijinbei"]
license = "MIT"

[workspace.dependencies]
gpui = { version = "0.2", default-features = false, features = ["wayland"] } # TODO: enable wayland when supported
gpui-component = "0.5"
gpui-component-assets = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "2.0"
anyhow = "1.0"
redb = "3.1"
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0"
