[package]
name = "love_note"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "love_note"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "love_note_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "export_schema"
path = "src/bin/export_schema.rs"

[[bin]]
name = "graphql_server"
path = "src/bin/graphql_server.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-graphql = { version = "7.0", features = ["dataloader", "uuid", "chrono"] }
sqlx = { version = "0.8", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "chrono",
    "uuid",
] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros"] }
thiserror = "2"
anyhow = "1"
base64 = "0.22"
axum = { version = "0.8", features = ["json", "tower-log"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
async-graphql-axum = "7"
dirs = "6"
tauri-plugin-graphql = {path = "../tauri-plugin-graphql"}
