[package]
name = "tauri-plugin-graphql"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-graphql"

[dependencies]
mizuki = "1"
async-graphql = "7"
tauri = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9.2"

[build-dependencies]
tauri-plugin = { version = "2.3.1", features = ["build"] }
mizuki-build = "1"
